fixed spacing for TournamentBrowser

--- a/src/pages/TournamentBrowserPage/TournamentBrowser.module.css
+++ b/src/pages/TournamentBrowserPage/TournamentBrowser.module.css
@@ -14,11 +14,9 @@
 
 .tournamentBrowser {
   display: grid;
-  justify-content: space-around;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   grid-auto-rows: 200px;
-  gap: 10px;
-
+  gap: 1rem;
   padding: 20px;
 }
 
